# trade-agent

./: .env.example  CLAUDE.md  alert.md  docker-compose.dev.yml  docker-compose.yml  implementation.md  main.py  pyproject.toml  test.md  trade_agent_audit_report.md
.claude/projects/-Users-mustafa-Desktop-projects-trade-agent/memory/: project_alert_system.md
alerts/: base.py  discord.py  email_alert.py  telegram.py  webhook.py
api/: server.py
backtest/: runner.py
config/: settings.py  settings.yaml
core/: candle.py  context.py  data_feed.py  engine.py  ict_tracker.py  models.py  pipeline.py  signal.py  structure.py
docker/: Dockerfile  Dockerfile.ui  nginx.conf
feeds/: twelve_data_feed.py
risk/: planner.py
scenarios/: __init__.py  _ict_helpers.py  base.py  bos_continuation.py  choch_confirmation.py  forex_1h_pullback.py  fvg_retrace.py  htf_pullback_continuation.py  liquidity_sweep.py
scoring/: scorer.py
tests/: test_bos_continuation.py  test_choch_confirmation.py  test_email_alert.py  test_fvg_retrace.py  test_htf_pullback_continuation.py  test_ict_full_setup.py  test_liquidity_sweep.py  test_pipeline.py  test_risk_planner.py  test_scenarios.py  test_scorer.py  test_structure.py
tests/fixtures/: candles.json
ui/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
ui/dashboard/src/: App.tsx  index.css  main.jsx  main.tsx
ui/dashboard/src/components/: ConnectionStatus.tsx  Header.tsx  HistoryTable.tsx  ScenarioStats.tsx  Sidebar.tsx  SignalCard.tsx  SignalList.tsx  StatsBar.tsx  SymbolTable.tsx  TimeframeMatrix.tsx
(+5 files in other folders)
