[project]
name = "trade-agent"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "ccxt>=4.2.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-telegram-bot>=21.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "scenarios", "scoring", "risk", "alerts", "api", "config", "backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
